# clash-nodes-app

./: .gitignore  README.md  forge.config.js  index.html  launch.bat  launch.ps1  package.json
.github/workflows/: build-android.yml  build-ios.yml  build-windows.yml
app/: autostart.js  main.js  preload.js  updater.js
scripts/: gen-icon.js
src/: index.html  manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  parser.rs
src-tauri/src/commands/: autostart.rs  fetch.rs  latency.rs  mod.rs  settings.rs  tray.rs
src/css/: atmosphere.css  style.css
src/js/: app.js  bridge.js  i18n.js  nodes.js  theme.js  water.js
